--- a/Olws1 Activity9 Pinoy-Boodle/olws1activity9.html
+++ b/Olws1 Activity9 Pinoy-Boodle/olws1activity9.html
@@ -198,11 +198,11 @@ h1 {
   <input class="input" type="text" placeholder="Search..." name="search">
 </div>
 
-<div class="main">
+<div className="main">
 <div class="bgimg">
 </div>
 </div>
-<div id="menu" class="menu">
+<div id="menu" className="menu">
 <img src="titlemenu.jpg" style="width:100%">
 <div class="container green pullRightLeft" id="fixednav">
   <a href="#fixednav" onclick="document.getElementById('myImage').src='menu1.jpg'"><b>BOODLE</b></a>
